@@ -66,7 +66,7 @@
             <td class="sventonCol4"></td>
             <td class="sventonCol5"></td>
             <td class="sventonCol6">
-              <a href="${showRevInfoUrl}" onmouseover="Tip('<spring:message code="showrevinfo.link.tooltip"/>')">
+              <a href="${showRevInfoUrl}" onmouseover="getLogMessage(${entry.revision}, '${command.name}');">
                 ${entry.revision}
               </a>
             </td>
